--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: node_js
 node_js:
 - node
 before_script:
-- npm install
+- yarn install
 notifications:
   email:
   - thomas.maclean@gmail.com
